--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
 
     <!-- Footer section -->
     <footer>
-        <div class="container">© QTrip 2020</div>
+        <div class="container text-center">© QTrip 2020</div>
     </footer>
 
     <!-- Bootstrap script -->
