ME_QTRIPDYNAMIC_MODULE_ADVENTURES

--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -88,7 +88,7 @@
     </div>
     <!-- Footer -->
     <footer>
-        <div class="container">© QTrip 2020</div>
+        <div class="container text-center">© QTrip 2020</div>
     </footer>
 
     <!-- Bootstrap script -->
